[project]
name = "asl-bug-fixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.3",
    "llm-sandbox[docker]>=0.3.37",
    "pydantic>=2.12.5",
    "pypiwin32>=223",
    "streamlit>=1.55.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 2000
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # errors, flakes, imports, bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
